--- a/frontend/src/pages/Register/styles.css
+++ b/frontend/src/pages/Register/styles.css
@@ -1,5 +1,31 @@
+.register-section {
+  width: 100%;
+  max-width: 1200px;
+  padding: 60px 30px;
+  margin: 0 auto;
+
+  display: flex;
+  align-items: flex-start;
+}
+
+.register-section > .action {
+  width: 50px;
+  height: 50px;
+  font-size: 30px;
+  text-align: center;
+  line-height: 60px;
+  color: #ffffff;
+  background-color: #8e4dff;
+  border-radius: 50%;
+
+  position: absolute;
+  bottom: 80px;
+  right: 40px;
+  z-index: 100;
+}
+
 .register-section > .sidebar {
-  width: 420px;
+  min-width: 300px;
   background-color: #ffffff;
   box-shadow: 0 0 14px 0 rgba(0, 0, 0, 0.02);
   border-radius: 2px;
@@ -16,4 +42,39 @@
 
 .register-section > .sidebar > .form-signin {
   margin-top: 30px;
+}
+
+.register-section > .devs-section {
+  flex-grow: 1;
+  margin-left: 30px;
+}
+
+.register-section > .devs-section > .devs-list {
+  list-style: none;
+
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 20px;
+}
+
+@media (max-width: 1000px) {
+  .register-section {
+    flex-direction: column;
+  }
+
+  .register-section > .sidebar {
+    width: 100%;
+  }
+
+  .register-section > .devs-section {
+    width: 100%;
+    margin-left: 0;
+    margin-top: 30px;
+  }
+}
+
+@media (max-width: 650px) {
+  .register-section > .devs-section > .devs-list {
+    grid-template-columns: 1fr;
+  }
 }
