--- a/frontend/src/pages/Main/styles.css
+++ b/frontend/src/pages/Main/styles.css
@@ -4,3 +4,19 @@ main {
   height: 100vh;
   position: relative;
 }
+
+main > .action {
+  width: 50px;
+  height: 50px;
+  font-size: 30px;
+  text-align: center;
+  line-height: 60px;
+  color: #ffffff;
+  background-color: #8e4dff;
+  border-radius: 50%;
+
+  position: absolute;
+  bottom: 140px;
+  left: 40px;
+  z-index: 50;
+}
