--- a/frontend/src/pages/Main/styles.css
+++ b/frontend/src/pages/Main/styles.css
@@ -5,6 +5,17 @@ main {
   position: relative;
 }
 
+main > .form-search {
+  max-width: 500px;
+  position: absolute;
+  top: 20px;
+  left: 20px;
+  right: 20px;
+  margin: 0 auto;
+
+  z-index: 100;
+}
+
 main > .action {
   width: 50px;
   height: 50px;
